# words_to_numbers

./: CMakeLists.txt  README.md  main.cpp
include/: converter.h  utils.h
src/: converter.cpp  utils.cpp
